--- a/src/packages/tsconfig.json
+++ b/src/packages/tsconfig.json
@@ -18,6 +18,9 @@
         { "path": "user3" },
         { "path": "user4" },
         { "path": "user5" },
-        { "path": "user6" }
+        { "path": "user6" },
+        { "path": "user7" },
+        { "path": "user8" },
+        { "path": "user9" }
     ]
 }
