--- a/src/server/tsconfig.json
+++ b/src/server/tsconfig.json
@@ -18,6 +18,9 @@
         { "path": "../packages/user4" },
         { "path": "../packages/user5" },
         { "path": "../packages/user6" },
+        { "path": "../packages/user7" },
+        { "path": "../packages/user8" },
+        { "path": "../packages/user9" },
         { "path": "../packages/util" }
     ]
 }
