--- a/src/packages/aws/tsconfig.json
+++ b/src/packages/aws/tsconfig.json
@@ -1,9 +1,7 @@
 {
-    "extends": "../tsconfig.json",
-    "include": ["src/**/*"],
+    "extends": "../tsconfig.packages.json",
     "compilerOptions": {
         "outDir": "dist/",
         "rootDir": "src/",
-        "baseUrl": "."
     }
 }
