--- a/src/packages/user2/tsconfig.json
+++ b/src/packages/user2/tsconfig.json
@@ -1,10 +1,8 @@
 {
-    "extends": "../tsconfig.json",
-    "include": ["src/**/*"],
+    "extends": "../tsconfig.packages.json",
     "compilerOptions": {
         "outDir": "dist/",
         "rootDir": "src/",
-        "baseUrl": "."
     },
     "references": [
         { "path": "../util" }
