--- a/src/server/tsconfig.json
+++ b/src/server/tsconfig.json
@@ -1,5 +1,6 @@
 {
     "extends": "../../tsconfig.settings.json",
+    "include": ["src/**/*"],
     "compilerOptions": {
         "module": "commonjs",
         "target": "ES2019",
