--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "files": [],
     "references": [
-        { "path": "src/server" }
+        { "path": "src/server" },
+        { "path": "src/client" }
     ]
 }
