--- a/src/packages/aws/package.json
+++ b/src/packages/aws/package.json
@@ -3,5 +3,8 @@
     "version": "1.0.0",
     "lockfileVersion": 2,
     "main": "dist/index.js",
-    "types": "dist/index.d.ts"
+    "types": "dist/index.d.ts",
+    "scripts": {
+        "compile": "tsc -b tsconfig.json"
+    }
 }
