--- a/src/packages/user/package.json
+++ b/src/packages/user/package.json
@@ -4,6 +4,9 @@
     "lockfileVersion": 2,
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
+    "scripts": {
+        "compile": "tsc -b tsconfig.esm.json tsconfig.json"
+    },
     "peerDependencies": {
         "@packages/util": "file:../util"
     }
