--- a/src/packages/user/tsconfig.esm.json
+++ b/src/packages/user/tsconfig.esm.json
@@ -3,5 +3,7 @@
     "compilerOptions": {
         "module": "esnext",
         "outDir": "dist/esm"
-    }
+    },
+    "exclude": ["dist/", "node_modules/", "src/**/*.*.test.*"],
+    "references": [{ "path": "../util/tsconfig.esm.json" }]
 }
