--- a/src/packages/aws/tsconfig.json
+++ b/src/packages/aws/tsconfig.json
@@ -1,7 +1,8 @@
 {
     "extends": "../tsconfig.packages.json",
+    "include": ["src/**/*"],
     "compilerOptions": {
         "outDir": "dist/",
-        "rootDir": "src/",
+        "rootDir": "src/"
     }
 }
