--- a/src/packages/user8/package.json
+++ b/src/packages/user8/package.json
@@ -4,7 +4,11 @@
     "lockfileVersion": 2,
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
+    "scripts": {
+        "compile": "tsc -b tsconfig.esm.json tsconfig.json"
+    },
     "peerDependencies": {
-        "@packages/util": "file:../util"
+        "@packages/util": "file:../util",
+        "@packages/user": "file:../user"
     }
 }
