--- a/src/packages/user8/tsconfig.json
+++ b/src/packages/user8/tsconfig.json
@@ -1,10 +1,9 @@
 {
     "extends": "../tsconfig.packages.json",
+    "include": ["src/**/*"],
     "compilerOptions": {
         "outDir": "dist/",
-        "rootDir": "src/",
+        "rootDir": "src/"
     },
-    "references": [
-        { "path": "../util" }
-    ]
+    "references": [{ "path": "../util" }, { "path": "../user" }]
 }
