--- a/src/packages/user9/package.json
+++ b/src/packages/user9/package.json
@@ -4,7 +4,17 @@
     "lockfileVersion": 2,
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
+    "scripts": {
+        "compile": "tsc -b tsconfig.esm.json tsconfig.json"
+    },
     "peerDependencies": {
-        "@packages/util": "file:../util"
+        "@packages/user": "file:../user",
+        "@packages/user2": "file:../user2",
+        "@packages/user3": "file:../user3",
+        "@packages/user4": "file:../user4",
+        "@packages/user5": "file:../user5",
+        "@packages/user6": "file:../user6",
+        "@packages/user7": "file:../user7",
+        "@packages/user8": "file:../user8"
     }
 }
