--- a/src/packages/user9/tsconfig.esm.json
+++ b/src/packages/user9/tsconfig.esm.json
@@ -3,5 +3,16 @@
     "compilerOptions": {
         "module": "esnext",
         "outDir": "dist/esm"
-    }
+    },
+    "exclude": ["dist/", "node_modules/", "src/**/*.*.test.*"],
+    "references": [
+        { "path": "../user/tsconfig.esm.json" },
+        { "path": "../user2/tsconfig.esm.json" },
+        { "path": "../user3/tsconfig.esm.json" },
+        { "path": "../user4/tsconfig.esm.json" },
+        { "path": "../user5/tsconfig.esm.json" },
+        { "path": "../user6/tsconfig.esm.json" },
+        { "path": "../user7/tsconfig.esm.json" },
+        { "path": "../user8/tsconfig.esm.json" }
+    ]
 }
