--- a/src/packages/util/tsconfig.esm.json
+++ b/src/packages/util/tsconfig.esm.json
@@ -3,5 +3,6 @@
     "compilerOptions": {
         "module": "esnext",
         "outDir": "dist/esm"
-    }
+    },
+    "exclude": ["jest.config.ts", "dist/", "node_modules/", "src/**/*.*.test.*"]
 }
