--- a/src/server/tsconfig.json
+++ b/src/server/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "extends": "../../tsconfig.settings.json",
     "include": ["src/**/*"],
+    "exclude": ["jest.config.ts"],
     "compilerOptions": {
         "module": "commonjs",
         "target": "ES2019",
@@ -11,7 +12,6 @@
     },
     "references": [
         { "path": "../packages/aws" },
-        { "path": "../packages/util" },
         { "path": "../packages/user" },
         { "path": "../packages/user2" },
         { "path": "../packages/user3" },
@@ -20,6 +20,7 @@
         { "path": "../packages/user6" },
         { "path": "../packages/user7" },
         { "path": "../packages/user8" },
-        { "path": "../packages/user9" }
+        { "path": "../packages/user9" },
+        { "path": "../packages/util" }
     ]
 }
