--- a/src/packages/business/tsconfig.json
+++ b/src/packages/business/tsconfig.json
@@ -1,9 +1,9 @@
 {
-    "extends": "../tsconfig.packages.json",
+    "extends": "../settings.tsconfig.json",
     "include": ["src/**/*"],
     "compilerOptions": {
         "outDir": "dist/",
         "rootDir": "src/"
     },
-    "references": [{ "path": "../util" }, { "path": "../user" }]
+    "references": [{ "path": "../util" }]
 }
