--- a/settings.tsconfig.json
+++ b/settings.tsconfig.json
@@ -14,7 +14,7 @@
         "downlevelIteration": true,
         "declarationMap": true,
         "baseUrl": ".",
-        "paths": { "@packages/*": ["./src/packages/*/"] },
+        "paths": { "@packages/*": ["./src/packages/*/"] }
     },
     "exclude": ["node_modules", "**/node_modules", "**/dist", "dist"]
 }
