--- a/src/packages/business/tsconfig.esm.json
+++ b/src/packages/business/tsconfig.esm.json
@@ -5,5 +5,5 @@
         "outDir": "dist/esm"
     },
     "exclude": ["dist/", "node_modules/", "src/**/*.*.test.*"],
-    "references": [{ "path": "../util/tsconfig.esm.json" }, { "path": "../user/tsconfig.esm.json" }]
+    "references": [{ "path": "../util/tsconfig.esm.json" }]
 }
