--- a/src/packages/settings.tsconfig.json
+++ b/src/packages/settings.tsconfig.json
@@ -1,5 +1,5 @@
 {
-    "extends": "../../tsconfig.settings.json",
+    "extends": "../../settings.tsconfig.json",
     "compilerOptions": {
         "module": "commonjs",
         "target": "ES2019",
