--- a/src/packages/util/tsconfig.json
+++ b/src/packages/util/tsconfig.json
@@ -1,5 +1,5 @@
 {
-    "extends": "../tsconfig.packages.json",
+    "extends": "../settings.tsconfig.json",
     "include": ["src/**/*"],
     "compilerOptions": {
         "outDir": "dist/",
