--- a/src/server/tsconfig.json
+++ b/src/server/tsconfig.json
@@ -1,5 +1,5 @@
 {
-    "extends": "../../tsconfig.settings.json",
+    "extends": "../../settings.tsconfig.json",
     "include": ["src/**/*"],
     "exclude": ["jest.config.ts"],
     "compilerOptions": {
@@ -13,14 +13,6 @@
     "references": [
         { "path": "../packages/aws" },
         { "path": "../packages/user" },
-        { "path": "../packages/user2" },
-        { "path": "../packages/user3" },
-        { "path": "../packages/user4" },
-        { "path": "../packages/user5" },
-        { "path": "../packages/user6" },
-        { "path": "../packages/user7" },
-        { "path": "../packages/user8" },
-        { "path": "../packages/user9" },
         { "path": "../packages/util" }
     ]
 }
