--- a/src/packages/business/package.json
+++ b/src/packages/business/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@packages/user",
+    "name": "@packages/business",
     "version": "1.0.0",
     "lockfileVersion": 2,
     "main": "dist/index.js",
