--- a/src/packages/user/tsconfig.esm.json
+++ b/src/packages/user/tsconfig.esm.json
@@ -5,5 +5,8 @@
         "outDir": "dist/esm"
     },
     "exclude": ["dist/", "node_modules/", "src/**/*.*.test.*"],
-    "references": [{ "path": "../util/tsconfig.esm.json" }]
+    "references": [
+        { "path": "../business/tsconfig.esm.json" },
+        { "path": "../util/tsconfig.esm.json" }
+    ]
 }
