--- a/src/packages/util/package.json
+++ b/src/packages/util/package.json
@@ -15,6 +15,7 @@
             "import": "./dist/esm/core/index.js"
         }
     },
+    "types": "dist/index.d.ts",
     "typesVersions": {
         "*": {
             "*": [
